--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environnement local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+.output
+
+# Next.js
+.next/
+out/
+
+# Logs
+logs
+*.log
+*.csv
+
+# IDEs / éditeurs
+.vscode/
+.idea/
+.DS_Store
+*.swp
+
+# Build
+dist/
+build/
+coverage/
