--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,43 @@
-# Node.js
+# .gitignore
+
+# === ENV FILES ===
+.env.local
+.env.*.local
+!.env.example
+
+# === NEXT.JS ===
+.next/
+out/
+.next/cache/
+
+# === NODE ===
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Environnement local
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# === OS / EDITOR FILES ===
+.DS_Store
+Thumbs.db
+*.swp
+.idea/
+.vscode/
 
-# Vercel
-.vercel
-.output
-
-# Next.js
-.next/
-out/
-
-# Logs
+# === LOGS ===
 logs
 *.log
 *.csv
+*.dat
 
-# IDEs / éditeurs
-.vscode/
-.idea/
-.DS_Store
-*.swp
-
-# Build
-dist/
-build/
+# === TEST COVERAGE ===
 coverage/
+
+# === TYPESCRIPT ===
+*.tsbuildinfo
+
+# === MISC ===
+*.local
+*.sublime-project
+*.sublime-workspace
+*.tgz
