--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
-  "env": {
-    "SUPABASE_SERVICE_ROLE_KEY": "@SUPABASE_SERVICE_ROLE_KEY",
-    "NEXT_PUBLIC_SUPABASE_URL": "@NEXT_PUBLIC_SUPABASE_URL",
-    "NEXT_PUBLIC_SITE_URL": "@NEXT_PUBLIC_SITE_URL"
+  "functions": {
+    "api/**.ts": {
+      "env": [
+        "SUPABASE_SERVICE_ROLE_KEY",
+        "NEXT_PUBLIC_SUPABASE_URL",
+        "NEXT_PUBLIC_SITE_URL"
+      ]
+    }
   }
 }
