--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,29 @@
-# .gitignore
-
-# === ENV FILES ===
-.env.local
-.env.*.local
-!.env.example
-
-# === NEXT.JS ===
+# Fichiers de build
 .next/
 out/
-.next/cache/
+dist/
 
-# === NODE ===
+# Dépendances
 node_modules/
+
+# Variables d’environnement
+.env
+.env.local
+.env.*.local
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# === OS / EDITOR FILES ===
+# Dossiers système
 .DS_Store
 Thumbs.db
-*.swp
-.idea/
+
+# IDE / éditeurs
 .vscode/
+.idea/
+*.swp
 
-# === LOGS ===
-logs
-*.log
-*.csv
-*.dat
-
-# === TEST COVERAGE ===
-coverage/
-
-# === TYPESCRIPT ===
-*.tsbuildinfo
-
-# === MISC ===
-*.local
-*.sublime-project
-*.sublime-workspace
-*.tgz
+# Supabase config locale
+.supabase/
