--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "functions": {
     "api/**.ts": {
-      "includedFiles": [],
-      "env": [
-        "SUPABASE_SERVICE_ROLE_KEY",
-        "NEXT_PUBLIC_SUPABASE_URL",
-        "NEXT_PUBLIC_SITE_URL"
-      ]
+      "includedFiles": []
     }
+  },
+  "env": {
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key",
+    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
+    "NEXT_PUBLIC_SITE_URL": "@next_public_site_url"
   }
 }
