--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.2.3",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^12.0.0"
   },
   "type": "commonjs",
   "devDependencies": {
