--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^20.11.18",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.17"
   }
 }
